--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "mongoose": "^5.10.16",
     "next": "10.0.3",
